--- a/07_bias_variance/py/L7 train validation test.ipynb
+++ b/07_bias_variance/py/L7 train validation test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -60,14 +60,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(202, 11)\n",
-      "(304, 11)\n"
+      "(303, 11)\n",
+      "(203, 11)\n"
      ]
     }
    ],
    "source": [
     "seed = 8\n",
-    "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.60, random_state=seed)\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.40, random_state=seed)\n",
     "\n",
     "print(X_train.shape)\n",
     "print(X_temp.shape)"
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -102,9 +102,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(202, 11)\n",
-      "(152, 11)\n",
-      "(152, 11)\n"
+      "(303, 11)\n",
+      "(101, 11)\n",
+      "(102, 11)\n"
      ]
     }
    ],
@@ -155,12 +155,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score : 26.7597859884 best score 26.7597859884\n",
+      "Ridge(alpha=0.001, copy_X=True, fit_intercept=True, max_iter=None,\n",
+      "   normalize=False, random_state=None, solver='auto', tol=0.001)\n",
+      "----\n",
+      " Best Score: 26.7597859884\n",
+      "Model:\n",
+      "Ridge(alpha=0.001, copy_X=True, fit_intercept=True, max_iter=None,\n",
+      "   normalize=False, random_state=None, solver='auto', tol=0.001)\n",
+      "[26.759785988383051, 26.767471919051989, 26.777002002645737, 26.805086995219515, 26.850272959116246, 26.893536800513616, 26.934992511447771, 27.41966817012441, 27.758994678845838, 28.094999893348067]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY0AAAEXCAYAAABRWhj0AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl8FfW9//FXTghhRxBZFIQo8hFlUcQNN3Cr63WtrVDr\nUvm10ttLvf3VVlEMarfbX3tvfRSXq0WpemvLoq3aa7F1aQV3K6DiB4JhB2VJ2ExCknN+f8wJHMJJ\ncgKZzEnyfj4ePDhnZr5n3mGZd2YmM5OTSCQQERHJRCzqACIi0nKoNEREJGMqDRERyZhKQ0REMqbS\nEBGRjLXa0jCzwqgzZEI5m1ZLyNkSMoJyNrXWkjMnrB+5NbM8YAYwEMgH7gOWAY8CCWApcLO7J+ob\n4+7P7ef6E+6ec0BfRDNQzqbVEnK2hIygnE2tteQMc09jArDR3c8ELgCmA3cTFMEZBKVwcQNjfh1i\nPhERaaR2IX72LGB28nUMqATKgIPNLAfoCuxqYExViPlERKSRQisNd98JYGZdCcpgCsEhqXnAnUAp\n8FoGY0REJEuEdk4DwMwGAHOB6e7+uJl9DFzl7kvMbBJwjLv/a31j9nO9+UA5MBioPpCvoRkUAwVR\nh8iAcjadlpARlLOptYScuUAR0MHdK9ItENqehpn1IdirmOTuryQndwK2J1+vB8ZkMKah9RQSnCtJ\np6iRsaNSHHWADCln02kJGUE5m1pLyVluZrWnTXP3wjB/eupXwJcBT5n8/4C7CPYCKoCJ7r7KzGYS\nHLL6HnBNrTEXunt5I9d9JFD01FNP0bdv3wP4KkRE2o4NGzYwYcIEgMHuvjzdMqEenoqKmQ0Civ/2\nt7/Rv3//qOOIiLQIa9as4ZxzzgEocPcV6ZZptRf3iYhI01NpiIhIxlQaIiKSMZWGiIhkTKUhIiIZ\nU2mIiEjGVBoiIpIxlYaIiGRMpSEiIhlTaYiISMZUGiIirdDL765i/sJ1Tf65Kg0RkVbGV27hv57+\nJy/Mb/qb6qo0RERakerqOA/MXkQiAeO/tM/tzQ+YSkNEpBV57vViPl23lXNOHMCwI3s1+eerNERE\nWomNJWU89eISunbK48ZLjg1lHSoNEZFW4pE/LqZ8VzU3XnIs3bvkh7IOlYaISCvw9kcbeGPxeo49\n4mDOOfHw0Naj0hARaeHKK6p4+JlF5MZyuOWqEcRiOaGtS6UhItLCPf2S83lJGVeOG8zAvt1CXZdK\nQ0SkBVuxfhvPvrac3j07cc25Q0JfX7uwPtjM8oAZwEAgH7gPWAY8CiSApcDN7p5IGRMDHgBGABXJ\n+cvDyigi0pLF4wkemL2Q6niCW64cQYf2oW3SdwtzT2MCsNHdzwQuAKYDdwP3ufsZBEVyca0xlwPt\n3X0M8EPgFyHmExFp0V56exVLVmzhtBGHMnpon2ZZZ5ilMQuYmrKeSqAMONjMcoCuwK5aY04DXgRw\n97eA0SHmExFpsUq3V/D48x/RMb8dEy8f1mzrDW1fxt13AphZV4ICmUJwSGoecCdQCrxWa1g3YFvK\n+2ozi7l7PKycIiIt0WPPf8SOskomXj6Mg7t3bLb1hnoi3MwGAC8Dv3X3p4EngTPcfSjwBPseftpG\nsAeyO58KQ0Rkb4uKNvLyu6s5sn93Lj7tiGZdd5gnwvsQ7FVMcvdXkpM7AduTr9cDY2oNmw9cCswy\ns1OARRmsp5DgXImISKtXWVXNA7MXkZMD3756JLnhXJNRbLbPzQ6nuXthmKfa7wC6A1PNrObcxreB\n2WZWTvDTURMBzGwmweGrZ4DzzGx+cvkbG1qJuxcChanTzGwQ0PT3BBYRidjcV4pYu3EHl5xWwFED\neoS1mgJ3X5FuRpjnNCYDk9PMeiHNstenvL0lrEwiIi3Zuk07+P1fl9KzWz5fu3BoJBl0cZ+ISAuQ\nSCR4aM4iKqvi3HzZcDp3zIskh0pDRKQF+McHa/nn0o2Mst6cPvLQyHKoNEREstyOskoe/eOHtG8X\n41tXjiAnJ7wbEjZEpSEikuWe/N8llGyv4JrzhtCvV+dIs6g0RESy2NJVJfx5QTED+nThyrFHRR1H\npSEikq2qq+NMn72QRAJuuWokee2i32RHn0BERNJ6fn4xn67dytmjBzD8yF5RxwFUGiIiWWlTaRlP\nvbiErp3yuOnSY6OOs5tKQ0QkCz3yx8WUVVRzwyXH0r1LftRxdlNpiIhkmXc+3sCCRes5pqAn5554\neNRx9qLSEBHJIuW7qnho7iJyYzlMunoksXBuSLjfVBoiIlnk6XnO5yVlXDF2MAP7dos6zj5UGiIi\nWWLl+m08+9pyevfsxFfOGxJ1nLRUGiIiWSAeTzB99kKq4wluuXIEHdqH+eSK/afSEBHJAn99ZxVL\nVmxhzIh+jB7aJ+o4dVJpiIhEbOuOCh5//iM65ucy8bLhUcepl0pDRCRiM577iO1fVPK1C4bS66CO\nUcepl0pDRCRCi4s28fK7qznisO5cfFpB1HEapNIQEYlIZVU1D8xZSE4OfPvqkeTmZv8mOfsTioi0\nUnNfLWLN5zu4aEwBQw7vEXWcjIT2M11mlgfMAAYC+cB9wHigb3KRAmCBu49PGRMDHgWGAHFgort7\nWBlFRKKyftNO/vDSUnp0zee6C4dGHSdjYe5pTAA2uvuZwAXAr939WncfB1wBlAC31hpzPtDZ3U8H\n7gF+FGI+EZFIJBIJHpyzkF1VcSZeNpzOHfOijpSxMK8emQXMTr6OAVUp8+4B7nf3z2qNKQO6m1kO\n0B3YFWI+EZFIvL5wHf9cupHjhxzC6ccdGnWcRgmtNNx9J4CZdSUokCnJ972Bs4HJaYbNBzoAnwAH\nA5eGlU9EJAo7yyp55NnF5LWLcctVI8nJya4bEjYk1OvUzWwAMBeY7u5PJydfDTzl7ok0Q24D5rv7\nFDPrD7xsZsPcvc49DjMrBO5u4ugiIqF48n+XULK9gq9dcDT9enWOOk5dis2s9rRp7l4Y5onwPsA8\nYJK7v5Iy6xzg3jqGdQa2JV+XAHlAbn3rcfdCoLDWugcBxY3NLCISpqWrSnhhQTH9e3fhynGDo45T\nnwJ3X5FuRph7GncQnJeYamZTgQRwEWDAp6kLmtlMgsNXPwceM7N/EBTG7e5eFmJGEZFmUV0dZ/rs\nhSQSMOmqkeS1q/f74awV5jmNyaQ/bzEszbLXp7y9IqxMIiJReWFBMZ+u3crZowcwfHCvqOPsN13c\nJyISss1by3jyfz+hS8c8brr02KjjHBCVhohIyB559kPKKqq44ZJj6d4lP+o4B0SlISISoneXfMb8\nResYOqgn5510eNRxDphKQ0QkJBWV1Tz8zCJisRwmXT2SWKxlXZORjkpDRCQks/62lA2bv+CyM49k\nUL9uUcdpEioNEZEQrN24gzkvF9GreweuPX+fC+VaLJWGiEgTq7khYVV1nImXD6djfqg332hWKg0R\nkSb293+uZeGyTYwe2odTh/eLOk6TUmmIiDShnWWV/OZPH9K+XYxvXjG8xd2QsCEqDRGRJlRzQ8Jr\nzhtC34Oz9oaE+02lISLSRIpWl/LnBcUcdkgXrhyb1Tck3G8qDRGRJlAdTzB9zkLiCbjlqhEt9oaE\nDVFpiIg0gRffWEHR6lLGjurPyKMOiTpOaFQaIiIHqGR7OU/8+WM6d2jX4m9I2BCVhojIAZrx3Efs\nLK/iuguH0qNbh6jjhEqlISJyABYVbeTV99YweMBBXDCmIOo4oVNpiIjsp8qqOA/OWURODky6agS5\nreCGhA1RaYiI7KdnXi1izec7uGhMAUcN6BF1nGah0hAR2Q8bNu/k9y85B3XN52sXDo06TrNRaYiI\nNFIikeDhZxazqyrON/5lGF065kUdqdmEdutFM8sDZgADgXzgPmA80De5SAGwwN3H1xp3O3ApkAf8\n2t1nhpVRRGR/vPnhet5d8hkjBvfirOMPizpOswpzT2MCsNHdzwQuICiAa919HHAFUALcmjrAzMYC\np7r7GGAscESI+UREGq2soor/fmYx7XJz+NaVI1rdDQkbEuZN3mcBs5OvY0BVyrx7gPvd/bNaY84H\nFpvZs0A34Psh5hMRabSn5zmbtpZzzblDGNCna9Rxml1opeHuOwHMrCtBgUxJvu8NnA1MTjPsEGAA\ncAnBXsafgKPDyigi0hgr12/jj39fTp+enbjm3CFRx4lEqI+TMrMBwFxgurs/nZx8NfCUuyfSDNkE\nLHH3KmCpmZWbWS9331TPOgqBu5s4uojIXuLxBA/MWUh1PMG3rhxBfl7rvCFhUrHZPo+onebuhWGe\nCO8DzAMmufsrKbPOAe6tY9jrBHsgvzSzQ4HOwOb61uPuhUBhrXUPAor3J7eISDovv7uKj4u3cOrw\nfowe2ifqOGErcPcV6WaEuadxB9AdmGpmU4EEcBFgwKepC5rZTGCKu79gZmea2dsE50Em1bFHIiLS\nbLbt3MWM5z6mQ/tcJl42POo4kQrznMZk0p+3GJZm2etTXv8grEwiIvtj5gsfs/2LXdx06bEc0qNj\n1HEipYv7RETqsaR4C/PeWsmgft249AxdBaDSEBGpQ3V1nAfmLASCp/G1y9UmU38CIiJ1eO71T1mx\nfhvnnXQ4xxQcHHWcrKDSEBFJY1NpGf/zl0/o2imP6y8+Juo4WUOlISKSxqN//JCyimpuuORYunfJ\njzpO1lBpiIjU8t4nnzF/0TqGDurJuSceHnWcrKLSEBFJUVFZzUNzFxGL5XDLVSOItYGn8TWGSkNE\nJMWsvy1lw+Yv+JczjqDg0O5Rx8k6Kg0RkaS1G3cw5+UienXvwPgv6V6p6ag0REQInsb34JyFVFXH\nmXj5cDrmh3o/1xZLpSEiAvz9n2tZuGwTJxzdm1OH94s6TtZSaYhIm7ezrJLf/OlD2reLtcmn8TWG\nSkNE2rwnX1xCyfYKrjl3CH0P7hx1nKym0hCRNq1oTSl/nl/MYYd04cpxg6OOk/XqLA0zO6yeeWeH\nE0dEpPlUxxM8MHsh8URwQ8K8dq36aXxNor49jedrXpjZnFrzfhFOHBGR5vOXN1ewbHUpZx3fn5FH\nHRJ1nBYh08NTuom8iLQqJdvL+e0LH9O5Qzu+8S/HRh2nxdA5DRFpk2Y89xE7y6u47sKh9OjWIeo4\nLYZKQ0TanEVFG3n1vTUM7t+dC8YURB2nRanvkse+ZjYVyKn1GqBv6MlEREJQWRXnwTmLyMmBSVeP\nJFc3JGyU+krjYfaUROrrHOChhj7YzPKAGcBAIB+4DxjPnsIpABa4+/g0Y3sD7wHnuPvShr8MEZHM\nPPNqEWs+38FFYwZx1IAeUcdpceosDXcvPMDPngBsdPfrzKwH8IG7DwQws4OAV4Bbaw9Kls3DwM4D\nXL+IyF5eX7iWp/7yCQd1zee6i/Q0vv1RZ2mYWSfgXuD37v62mf0nMBF4H7jW3dc28NmzgNnJ1zGg\nKmXePcD97v5ZmnE/Bx4Ebs/sSxARadj8hev4+ZPvkZ+Xy5QbTqJLx7yoI7VI9Z0I/xXQEVhpZhcR\n7DkcB/wS+HVDH+zuO919h5l1JSiQKbD70NPZwOO1x5jZDQR7J/OSk3SwUUQO2PxF6/iPJ98lPy+X\ne/7PqRw9qGfUkVqs+s5pnAoMd/eEmV0G/MHdi4AiM/tJJh9uZgOAucB0d386Oflq4Cl3T6QZciOQ\nMLNzCQpqppldVsceSc06CoG7M8kjIm3PgkXr+PkT75KfF2PaRBVGhorNrPa0ae5eWF9pVKVs2McB\nt6XMa9/QGs2sDzAPmOTur6TMOofgsNc+3P2slPGvAN+srzCSYwqBwlrrHgQUN5RRRFq3BYvW8R9P\nvEv7vBjTJo5haIEKI0MF7r4i3Yz6SmOLmZ0MdAYOBf4KYGbjgNUZrPQOoDswNfnjugngIsCAT1MX\nNLOZwJ3unsnniog06I3FewqjcOKpKowmUl9pfBf4PdAH+Hby/MRdwHeASxr6YHefDExOM2tYmmWv\nTzNtXEPrEBFJ543F6/jZb98lr12Mu28+lWMKDo46UqtRX2kcD/y05o2ZXQ+sB34EHA28HW40EZHG\ne2Px+t2FUTjxVI49QoXRlOorjceAzwkOS1Wmmf/bUBKJiOynNz9cz89++44KI0T1lcYo4CvA+cBC\ngkNVf3X36uYIJiLSGG+lFMbdN5+iwghJfVeEfwB8ANxuZicSFMiPzewdggv+XqlrrIhIc3r7ow38\n9LfvkJsbFMawI3tFHanVyugut+7+DvB9gtt+jCDlAU0iIlF6+6MN/GTm2yqMZlLf4SnMLAacSXBB\n3oUEh6nuR6UhIlng7Y9TCuMbpzBchRG6+u499RDwJeCfwB+AH7r7juYKJiJSn3c+3sBPHn+HWCxZ\nGINVGM2hvj2N/wNsJvjR2+OBn6RcVp5wdz0CVkQi8e6Sz/jx4+8Qi+Vw980nqzCaUX2loVIQkazz\n7pLP+NFjbxOL5TD1GyczYvAhUUdqU+r76akVzZhDRKRBuwsjB6bedDIjj1JhNDc9I1xEWoT3PvmM\nHz+eLIxvnMLIISqMKKg0RCTrvf/J5/zosbfJAe76xskqjAipNEQkq73/yefc99hb5AB33nQyxw3p\nHXWkNk2lISJZ630PCgNgyk0nc7ypMKKm0hCRrPRP/5wfzQgK486bTmaUCiMrqDREJOt8sPRz7pvx\nFgngzhtVGNlEpSEiWeWDpZ9z72+Cwphy40mMOlqFkU1UGiKSNRYu3ci9v3mLeCIojBOO7hN1JKlF\npSEiWWHhso3cM0OFke1UGiISuYXLNnLPb94iHk8w5caTGD1UhZGt6r01+oEwszxgBjAQyAfuA8YD\nfZOLFAAL3H18fWPc/bmwMopI9BYV7SmMO244UYWR5cLc05gAbHT3M4ELgF+7+7XuPg64AigheKhT\nvWNCzCciEVtctIlpj75FPB7n9htO5MRj+jY8SCIV2p4GMAuYnXwdA6pS5t0D3O/unzVijIi0IouX\nb2Lab95MFsZJnKTCaBFCKw133wlgZl0JymBK8n1v4GxgcqZjRKR1Wbx8E9MefZPq6ji3X6/CaEnC\n3NPAzAYAc4Hp7v50cvLVwFPunmjEmPrWUQjc3TSJRSRsH6YUxg+/fiInHavCyELFKQ/dqzHN3QvD\nPBHeB5gHTHL3V1JmnQPc28gxdXL3QqCw1ucMAoobHVpEQvXRp5t3F8YPvn4iJw/rF3UkSa+grmcq\nhbmncQfQHZhqZlOBBHARYMCnqQua2UzgTuB7tcYAXOju5SHmFJFm8NGnmyl85A0qq+L88PoTOUWF\n0SKFeU5jMmnOWwDD0ix7ffLld5O/RKQVSS2MH3xdhdGS6eI+EQnVx8WbmfZoTWGM5tThKoyWTKUh\nIqH5uDjYw9hVGee260Zz6vBDo44kB0ilISKhWFK8hcJH3qCiMs73rxvNmBEqjNZApSEiTe6TFVu4\nO1kYt103mtNUGK2GSkNEmtQnK7Yw9b/foKKymtu+psJobVQaItJkPllZqzBGqjBaG5WGiDQJX7mF\nu5OF8f2vnaDCaKVUGiJywDy5h1G+q5r/O+EETh95WNSRJCQqDRE5IEtXlewpjPEncMZxKozWTKUh\nIvtt6aoSpj68gPKKqqAwjldhtHYqDRHZLzWFUVZRxfcmqDDaCpWGiDTastV7CuPfx5/Amcf3jzqS\nNBOVhog0StHqUu56+A3KKqq4dfwJnDVKhdGWqDREJGNFq0u58+EFlJVXcuu1oxirwmhzVBoikpGi\nNaXclSyM7147irEnDIg6kkRApSEiDSpaU8pdDy1gZ7Iwxqkw2iyVhojUa3lqYXxVhdHWqTREpE7L\n15Ry5+7COJ6zR6sw2jqVhoik9enardz1cFAYk79yPGePPjzqSJIFVBoiso9P127lzofms6Oskn+7\n5njOOVGFIYF2YX2wmeUBM4CBQD5wHzAe6JtcpABY4O7jU8bEgAeAEUAFcLO7Lw8ro4jsq3hdamEc\nx7knqTBkjzD3NCYAG939TOAC4Nfufq27jwOuAEqAW2uNuRxo7+5jgB8Cvwgxn4jUUrxuK1MeXMCO\nskq+8+XjOPekgVFHkiwTZmnMAqamrKcqZd49wP3u/lmtMacBLwK4+1vA6BDziUiKmsLY/sUuvvPl\n4zjvZBWG7Cu00nD3ne6+w8y6EhTIFAAz6w2cDTyeZlg3YFvK++rkISsRCdGK9du486FkYVyjwpC6\nhXZOA8DMBgBzgenu/nRy8tXAU+6eSDNkG9A15X3M3eMNrKMQuLsJ4oq0SSvWb2PKg/PZtnMX//rl\n4zhfhSFQbGa1p01z98IwT4T3AeYBk9z9lZRZ5wD31jFsPnApMMvMTgEWNbQedy8ECmutexBQ3OjQ\nIm3Myr0KYyRfOkWFIQAUuPuKdDPC3NO4A+gOTDWzqUACuAgw4NPUBc1sJsHhq2eA88xsfnLWjSHm\nE2nTVq7fxpSHgsL49tUj+dIpg6KOJC1AaKXh7pOByWlmDUuz7PUpb28JK5OIBFZuCApj645dTLp6\nJBecOijqSNJC6CSzSBuzasM27nxwQVAYV43gQhWGNIJKQ6QNWbVhG1MeXEDpjgpuuWoEF44piDqS\ntDAqDZE2YvVn25nyUFAY37pyBBepMGQ/qDRE2oDVn23njgfnU7q9gm9dMZyLT1NhyP4J9ToNEYlW\nVXWc195fw+MvfLynME4/IupY0oKpNERaoV2V1fz1nVXMeaWIz7d8QW4sR4UhTUKlIdKKlFVU8eIb\nK3j2tSK2bKugfbsYl5xewBVjB9O7R6eo40kroNIQaQV2fLGL5+cX86e/L2f7F5V0zM/lqnGDueys\nI+nRtUPU8aQVUWmItGCl2yv449+X88L8YsoqqujaKY/xXzqaS08voEun9lHHk1ZIpSHSAm0sKWPu\nq8uY9+ZKdlXFOahrPl89z7jg1IF06pAXdTxpxVQaIi1E+a4q3v5oA6++v4b3P/mc6niCQ3p05Kqx\ngzn35IHk5+VGHVHaAJWGSBarro6zcNkmXn1/NW9+uJ6yimoAjjisO5eeXsDYEwbQLleXW0nzUWmI\nZJlEIsGy1aW8+v4a/vHBWkq3VwDQu2cnLj2jP2NH9WdAn64NfIpIOFQaIlli3cYdvPr+Gl57fw3r\nNu0EoGun9lw0ZhBjRw3g6EE9yMnJiTiltHUqDZEIlWwv5x8frOXV99awbHUpAO3zcjnzuMM464T+\njLLeOvwkWUWlIdLMviiv5M0PN/Da+2v4YNlG4vEEsRwYZb05a1R/ThnWVz8BJVlLpSESokQiwcaS\nMnxVCb6yhKWrSihaU0plVRyAIYcfxFmj+nPGcYfpIjxpEVQaIk2orKKKotWlfLJyC0uTRVGSPJEN\nEIvlMKhfN045ti9njerPoYd0iTCtSOOpNET2UzyeYM3n2/GVJbv3JFZt2EY8sWeZnt06MGZEP+zw\nHtjAnhzZvzsd2uu/nbRc+tcrkqGtOyp27z34yhKWri7hi/Kq3fPb5+Vy9KCe2MCe2MAe2OE96HVQ\nxwgTizS90ErDzPKAGcBAIB+4D3gLeAQ4CMgBvu7uK1LGxIBHgSFAHJjo7h5WRpG6VFbFKV63dU9B\nrCph/eadey1z2CGdOWVYP4Yc3gMb2INB/brpJ52k1QtzT2MCsNHdrzOzHsBC4G/AE+4+28zGAsOA\nFSljzgc6u/vpZnYu8CPg6hAziuw5Wb37MNMWlq/duvtkNUCXjnmMOrp38jBTD4Yc3oOuuiGgtEFh\nlsYsYHbydQyoBE4DFpnZSwRlMbnWmDKgu5nlAN2BXSHmkzYikUiwo6ySLVvL2bytnC1by9myLfj1\neckXLFtduvuqa9hzstoG9uDoZEEc2qsLsZgurBMJrTTcfSeAmXUlKJA7gZnAFnc/z8zuAn4A3J0y\nbD7QAfgEOBi4NKx80jqUVVSxZVs5m7eW7S6D2sWwZWs5u1L2Gmo7uLtOVotkKtT/GWY2AJgLTHf3\n35nZL4E/JWc/R3D4KdVtwHx3n2Jm/YGXzWyYu9e5x2FmhexdPNIK7Kqs3rPRTymBzbV+L6uoqvMz\nYjlwUNd8Du/XjYO7daBntw707J78vVsHDk6+7t4lvxm/MpEWodjMak+b5u6FYZ4I7wPMAya5+yvJ\nya8DFwNPAmcBH9Ya1hnYlnxdAuQB9d7v2d0LgcJa6x4EFO93eAlNdXWc0h0VbN66Z8O/pdaeweat\n5Wz/ov4jk906t6dPz0707N4hKISa31OK4aAu+eTqxLTI/ihI/SGlVGHuadxBcF5iqplNBRLADcCj\nZnYLUAqMBzCzmcAU4OfAY2b2D4LCuN3dy0LMKBmIxxOU76qiYlc1ZbuqKK+opjz5e/C+ivJd1ZRX\nVO0zv3xXFWUVVewsD84plO6oIJGoe12dO7SjZ/cOHHFYt917BEEhdNy9Z9CjWz557fTsCJEohHlO\nYzL7nuiG4Cekai97fcrbK8LKlK0SiQTxRPBdeHU8EfyqjhOveR1PUB2PU12dSJkWvK/9Ol7zPp5I\nmRa8r6oO5lVVBSWw94Z+z/vyXdWUVewpiYpd1Qf8NbbPy+Xgbh04pqDL7j2DvUsheN0hX+cSRLJZ\nm/gfunxNKcXrtu21Aa3ZMO95HWxQ99pQJ+fXTKtKfV+9Z+McT/N58ZTlq+MJ4qnrqslRved9tsiN\n5dAhvx0d2+fSuWMevQ4KNuQd2rejQ/tcOua3S77PDabl59Kxfcq0/HbJ9zXzg+m6fkGkdWgTpXHf\nY2+zqTTco1yxHIjFYuTm5pAbq/kVIxbLITc3h3btYuTHcoJlktNqlkl9HasZm5ucF8tJmRbb/dk1\n09olp8VSlt+9TO7e73NjMWK5OeTlxvZs1Gs29MliyGunjbuI1K1NlMYdN5zIqg3b99pwpm5Iaza6\n7ZIb8Fjqhja31oY7ZSMfi+29YRcRae3aRGkcNaAHRw3oEXUMEZEWT8ciREQkYyoNERHJmEpDREQy\nptIQEZGMqTRERCRjKg0REcmYSkNERDKm0hARkYypNEREJGMqDRERyZhKQ0REMqbSEBGRjKk0REQk\nYyoNERHJmEpDREQyFtrzNMwsD5gBDATygfuAt4BHgIOAHODr7r6i1rjbgUuBPODX7j4zrIwiItI4\nYe5pTAAlVgVWAAAH30lEQVQ2uvuZwAXAdOBnwBPufhYwFRiWOsDMxgKnuvsYYCxwRIj5RESkkcJ8\nct8sYHbydQyoBE4DFpnZS8AKYHKtMecDi83sWaAb8P0Q84mISCOFtqfh7jvdfYeZdSUokDuBQcAW\ndz8PWAX8oNawQ4ATgKuBbwFPhZVPREQaL9RnhJvZAGAuMN3df2dmvwT+lJz9HPCjWkM2AUvcvQpY\namblZtbL3Tc1ctW5ABs2bDiA9CIibUvKNjO3rmXCPBHeB5gHTHL3V5KTXwcuBp4EzgI+rDXsdYJD\nVr80s0OBzsDmBtZTCNydbt6ECRP2N76ISFtWZGa1p01z98KcRCIRyhrN7FfAlwFPTkoANwCPEpRB\nKTDe3bea2UxgiruvMbOfAeMIDp3d7u4v7ce684FyYDBQfaBfS8iKgYKoQ2RAOZtOS8gIytnUWkLO\nXKAI6ODuFekWCK00omZmCXfPiTpHQ5SzabWEnC0hIyhnU2stOXVxn4iIZEylISIiGVNpiIhIxlpz\naUyLOkCGlLNptYScLSEjKGdTaxU5W+2JcBERaXqteU9DRESamEpDREQyptIQEZGMqTRERCRjKg0R\nEclYqHe5jZKZ/YDg4U8APYA+7t4vwkhpmVku8EuCW8K3B6a6+4vRptqbmeUAa4ClyUlvuPsdEUaq\nl5kdDbwJ9Hb3XVHnqc3MOgP/Q/AEy13A9e6+LtpU+zKz7gQ3F+1K8G/z3939zWhT1c/MrgCudves\nuVupmcWAB4ARQAVws7svjzZV3czsZOCn7j4u3fxWu6fh7j9z93HJL3w1cF3UmepwHdDO3U8HLgeG\nRpwnnSOB92r+PLO8MLoBvyC4YWW2uhl4J/kEyyeB2yLOU5dbgZfcfSzBzUanR5qmAcmbpP6Y4FHS\n2eRyoH3yiaQ/JPj3mZXM7DaCR3Ln17VMqy2NGmZ2JcGDn/4adZY6nA+sNbPnCf6y/hhxnnROAA4z\ns5fN7AUzGxJ1oHSSe0QPA7cDZRHHqZO712zcAAYCJRHGqc9/Av+dfJ1HFv+ZJs0HbiH7SuM04EUA\nd38LGB1tnHoVAVdSz59hqzg8ZWbfAL5ba/IN7v4eQbN/tflT7auOnBuBMne/xMzOBB4jeNZIJOrI\nOAn4sbvPMbPTCL47PqnZw6WoI+dK4Gl3X5R8FkDkG4/6/m2a2d+AYQTfOESqgZx9gSfY9/HMkagn\n6x/MbGwEkRrSDdiW8r7azGLuHo8qUF3cfa6ZDapvmVZ9RbiZHQP8l7tH/p+yLmb2O2CWu89Nvl+f\nbedezKwjUOXulcn3a9y9f8Sx9mFmywjOvQCcAryVPLSStSxotxfcfXDUWdIxs+HA74Dvuftfos7T\nkGRpfNPdr406Sw0z+wXwprvPSr5f7e4DIo5Vp2Rp/M7dT003v1XsadTjXODPUYdowOvARcBcMxtJ\n8N1ytpkKbAF+nsy4KuI8abn7UTWvzayYLPgOPh0zux1Y4+5PADuBqogjpZX8pmsW8GV3Xxx1nhZs\nPnApMMvMTgEWRZzngLT20hhC8MjZbPYI8KCZvZF8/60ow9Thp8CTZnYRwQbuhmjjZCSbd6F/A8w0\ns5sInpR2Y8R56vJjgp+auj95uK/U3a+INlKDEmTf3/0zwHlmNj/5Plv/vlPV+WfYqg9PiYhI02r1\nPz0lIiJNR6UhIiIZU2mIiEjGVBoiIpIxlYaIiGRMpSEiIhlTaYjUYmZjzeyV/Rzb38xmNLDMq2ZW\n561izGxQ8uLExqx3ppkd2pgxIvtDpSHStP6L4GLI+oRxAdrPCG4wKBKq1n5FuMh+M7OjCK7Y70Fw\nu49/c/d3zaw/8BTB8zAWA2e5+wAzGwz0c/elyfFfBv4d6Jj8dbO7/yP58TnJ+yTdmXzfH3ib4Lbp\nAB2T9yUbRnAX3MvdfYuZ/SvwNaAzEAe+4u6fuPvHyT2UI9z909D+UKTN056GyL5q9gKeJLjh5UiC\nZ0vMNrP2wK8Ibug2EpgNHJZc/hLgH7D7wTvfBC529+MI9gS+n2YdpySXGwp0AL6dnH4I8At3Hw58\nBnzVzLoClxGU1HDgWYI7ENd4PZlBJDQqDZH0ugJHuvuzsPs5CFsAI7gR5hPJ6c8CpckxRwFrk9Pj\nwBXAhWZ2D3A9wd5BjRyC4viruy9390TyM89OTl/n7u8ml/0I6OXu24HxwHgz+wnBTfBSP3NlMoNI\naFQaIunlsO/zOHIIDulWE9xosLZqknesNbMuwLsED1l6Fbifvf+/1exppN7hNjflfVWtZXPMbADB\nY2y7AS8Aj9f6zEqCQ1YioVFpiKS3DViefOY0yVta9wE+BF4i+I4fM7uQ4NwGwHKCkoDgDsvVwE8I\nSuMi9i6amlIaZ2Z9k4ezvk5wK/+6Hh41GliWfPLfO2k+8whg2f59uSKZUWmIpJcgOOH8b2a2iGBP\n4crkg6i+C1xlZu8D17Dn8NTzwNjk6w+Sv5YArxE8Q+HwWp+fIDic9RTBIajVwKMp82vnmQfEzOxD\n4C/Jzx2UssyZwHP7+wWLZEK3RhdpJDP7DsG5iCVmNgp42N1PTM6bA0x1948y+JyxwA/c/cImyDQS\nuMPdv3KgnyVSH/3IrUjjLQN+Z2ZxoByYmDLvVuAeMntQVVNer/F94HtN9FkiddKehoiIZEznNERE\nJGMqDRERyZhKQ0REMqbSEBGRjKk0REQkYyoNERHJ2P8HnWsiGPXz0lIAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x114b23cc0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "np.random.seed(88)\n",
+    "MSE = []\n",
+    "alphas = [0.001, 0.005, 0.01,0.025, 0.05, 0.075, 0.1, 0.5, 1, 2]\n",
+    "best_score = 100\n",
+    "best_lm = linear_model.Ridge()\n",
+    "\n",
+    "for a in alphas:\n",
+    "    lm = linear_model.Ridge(alpha = a)\n",
+    "    lm.fit(X_train, y_train)\n",
+    "    # predict on validation set\n",
+    "    y_hat = lm.predict(X_valid)\n",
+    "    score = mean_squared_error(y_valid, y_hat)\n",
+    "    if score < best_score:\n",
+    "        best_lm = lm\n",
+    "        best_score = score\n",
+    "        print(\"score : %s best score %s\"% (score, best_score))\n",
+    "        print(best_lm)\n",
+    "    MSE.append( mean_squared_error(y_valid, y_hat) )\n",
+    "\n",
+    "plt.plot(np.log(alphas), MSE)\n",
+    "plt.xlabel('log(alpha)')\n",
+    "plt.ylabel('MSE')\n",
+    "\n",
+    "print('----\\n Best Score: %s'% best_score)\n",
+    "print('Model:')\n",
+    "print(best_lm)\n",
+    "print(MSE)"
+   ]
   },
   {
    "cell_type": "code",
