--- a/09_logistic_regression/py/Feature scaling in classification.ipynb
+++ b/09_logistic_regression/py/Feature scaling in classification.ipynb
@@ -200,37 +200,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "        Unnamed: 0       balance        income      default2      student2\n",
-       "count  10000.00000  10000.000000  10000.000000  10000.000000  10000.000000\n",
-       "mean    5000.50000    835.374886  33516.981876      0.033300      0.294400\n",
-       "std     2886.89568    483.714985  13336.639563      0.179428      0.455795\n",
-       "min        1.00000      0.000000    771.967729      0.000000      0.000000\n",
-       "25%     2500.75000    481.731105  21340.462905      0.000000      0.000000\n",
-       "50%     5000.50000    823.636973  34552.644800      0.000000      0.000000\n",
-       "75%     7500.25000   1166.308387  43807.729275      0.000000      1.000000\n",
-       "max    10000.00000   2654.322576  73554.233500      1.000000      1.000000"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1929    4]\n",
+      " [  46   21]]\n"
+     ]
     }
    ],
    "source": [
-    "df.describe()"
+    "X = df[['balance','income']]\n",
+    "df['default_fact'] = df.default.factorize()[0]\n",
+    "y = df['default_fact']\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=88)\n",
+    "\n",
+    "\n",
+    "# scaler.fit(X_train)\n",
+    "\n",
+    "# XX = scaler.transform(X_train)\n",
+    "XX = scaler.fit_transform(X_train)\n",
+    "\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "parameters = {'solver': ['newton-cg','lbfgs','liblinear','sag']}\n",
+    "\n",
+    "clf = GridSearchCV(lr, parameters, cv = 5)\n",
+    "\n",
+    "clf.fit(XX, y_train)\n",
+    "\n",
+    "best_clf = clf.best_estimator_\n",
+    "\n",
+    "y_hat = best_clf.predict(scaler.transform(X_test))\n",
+    "print(confusion_matrix(y_test, y_hat) )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -238,20 +257,38 @@
     {
      "data": {
       "text/plain": [
-       "array([[4, 2],\n",
-       "       [1, 3]])"
+       "array([  4.83400782e+00,   1.33975451e+04])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "y_true = [0,0,0,0,0,1,1,1,1,1]\n",
-    "y_pred = [0,0,0,1,1,0,1,1,1,1]\n",
-    "confusion_matrix(y_true, y_pred)"
+    "scaler.scale_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.72111771,  0.25106203]])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_clf.coef_"
    ]
   },
   {
