--- a/11_svm_imbalanced/py/Imbalanced Lab.ipynb
+++ b/11_svm_imbalanced/py/Imbalanced Lab.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -68,12 +68,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.940226726211\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_hat = np.zeros(len(y))\n",
+    "\n",
+    "print(accuracy_score(y_hat,y))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,12 +112,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.947639484979\n",
+      "[[1104   61]\n",
+      " [   0    0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[mean: 0.57257, std: 0.02661, params: {'C': 0.001},\n",
+       " mean: 0.63379, std: 0.03615, params: {'C': 0.01},\n",
+       " mean: 0.64054, std: 0.03854, params: {'C': 0.1},\n",
+       " mean: 0.64114, std: 0.03898, params: {'C': 0.5},\n",
+       " mean: 0.64057, std: 0.03923, params: {'C': 1}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size=0.20, random_state=42)\n",
+    "# => 273 / 75 Yes\n",
+    "\n",
+    "parameters = {'C': [0.001, 0.01,0.1, 0.5, 1]}\n",
+    "\n",
+    "clf = GridSearchCV(SVC(kernel='rbf'), parameters, cv=5, scoring='roc_auc')\n",
+    "clf.fit(X_train,y_train)\n",
+    "# confusion matrix of best model\n",
+    "\n",
+    "\n",
+    "y_hat = clf.predict(X_test)\n",
+    "\n",
+    "print( accuracy_score(y_hat,y_test))\n",
+    "# 94% accuracy!!!\n",
+    "\n",
+    "# print(classification_report(y_hat, y_test))\n",
+    "print( confusion_matrix(y_hat,y_test))\n",
+    "clf.grid_scores_"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,12 +183,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.628571428571\n",
+      "[[46 34]\n",
+      " [18 42]]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.72      0.57      0.64        80\n",
+      "          1       0.55      0.70      0.62        60\n",
+      "\n",
+      "avg / total       0.65      0.63      0.63       140\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[mean: 0.67883, std: 0.03527, params: {'C': 0.001},\n",
+       " mean: 0.67844, std: 0.03534, params: {'C': 0.01},\n",
+       " mean: 0.67831, std: 0.03510, params: {'C': 0.1},\n",
+       " mean: 0.70307, std: 0.04951, params: {'C': 0.5},\n",
+       " mean: 0.70453, std: 0.05615, params: {'C': 1}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "under_df = df[df.Purchase == 'Yes']\n",
+    "under_df = under_df.append(df[df.Purchase == 'No'].sample(348)).sample(frac=1).reset_index(drop=True)\n",
+    "\n",
+    "# under_df has 696 samples with 50/50 yes no\n",
+    "y = under_df.Purchase.factorize()[0]\n",
+    "X = under_df.drop(['Purchase'], axis=1).values\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size=0.20, random_state=42)\n",
+    "parameters = {'C': [0.001, 0.01,0.1, 0.5,1]}\n",
+    "\n",
+    "clf = GridSearchCV(SVC(kernel='rbf'), parameters, cv=5, scoring='roc_auc')\n",
+    "clf.fit(X_train,y_train)\n",
+    "# confusion matrix of best model\n",
+    "\n",
+    "\n",
+    "y_hat = clf.predict(X_test)\n",
+    "\n",
+    "print( accuracy_score(y_hat,y_test))\n",
+    "print( confusion_matrix(y_hat,y_test))\n",
+    "print( classification_report(y_hat,y_test))\n",
+    "\n",
+    "\n",
+    "clf.grid_scores_"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,12 +266,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No     5474\n",
+      "Yes    2088\n",
+      "Name: Purchase, dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aperrier/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/utils/validation.py:420: DataConversionWarning: Data with input dtype int64 was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n",
+      "/Users/aperrier/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/utils/validation.py:420: DataConversionWarning: Data with input dtype int64 was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.844018506279\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.94      0.85      0.90      1201\n",
+      "          1       0.59      0.81      0.68       312\n",
+      "\n",
+      "avg / total       0.87      0.84      0.85      1513\n",
+      "\n",
+      "[[1025  176]\n",
+      " [  60  252]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../../datasets/Caravan.csv', index_col = False)\n",
+    "\n",
+    "# let's replicate the number of yes cases by 6\n",
+    "tmp = df[df.Purchase == 'Yes']\n",
+    "for _ in range(4):\n",
+    "    tmp = tmp.append( df[df.Purchase == 'Yes']  )\n",
+    "\n",
+    "df = df.append(tmp).sample(frac=1).reset_index(drop=True)\n",
+    "print(df.Purchase.value_counts())\n",
+    "# we now have 5474 / 2088\n",
+    "\n",
+    "y = df.Purchase.factorize()[0]\n",
+    "X = df.drop(['Purchase'], axis=1).values\n",
+    "scale = StandardScaler()\n",
+    "X = scale.fit_transform(X)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size=0.20, random_state=42)\n",
+    "\n",
+    "parameters = {'C': [0.001, 0.01,0.1, 0.5,1]}\n",
+    "\n",
+    "clf = GridSearchCV(SVC(kernel='rbf'), parameters, cv=5, scoring='roc_auc')\n",
+    "clf.fit(X_train,y_train)\n",
+    "clf.grid_scores_\n",
+    "\n",
+    "y_hat = clf.predict(X_test)\n",
+    "print( accuracy_score(y_hat,y_test))\n",
+    "# 83% accuracy!!!\n",
+    "\n",
+    "print(classification_report(y_hat, y_test))\n",
+    "print( confusion_matrix(y_hat,y_test))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,6 +357,58 @@
     "GridsearchCV with the same parameters as before on the  smo_X, smo_y sets.\n",
     "\n",
     "Conclusion?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aperrier/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/utils/validation.py:420: DataConversionWarning: Data with input dtype int64 was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n",
+      "/Users/aperrier/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/utils/validation.py:420: DataConversionWarning: Data with input dtype int64 was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "fit_sample() missing 1 required positional argument: 'y'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-6da1a918a334>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mimblearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mover_sampling\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSMOTE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0msmox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msmoy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSMOTE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_sample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0msmox_vis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msmox\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: fit_sample() missing 1 required positional argument: 'y'"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../../datasets/Caravan.csv', index_col = False)\n",
+    "\n",
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
+    "y = df.Purchase.factorize()[0]\n",
+    "X = df.drop(['Purchase'], axis=1).values\n",
+    "scale = StandardScaler()\n",
+    "X = scale.fit_transform(X)\n",
+    "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size=0.20, random_state=42)\n",
+    "\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "smox, smoy = SMOTE.fit_sample(X_train, y_train)\n",
+    "smox_vis = pca.transform(smox)\n",
+    "\n",
+    "parameters = {'C': [0.001, 0.01,0.1, 0.5,1]}\n",
+    "\n",
+    "clf = GridSearchCV(SVC(kernel='rbf'), parameters, cv=5, scoring='roc_auc')\n",
+    "clf.fit(smox,smoy)\n",
+    "clf.grid_scores_\n",
+    "y_hat = clf.predict(X_test)\n"
    ]
   },
   {
