--- a/12_decision_trees/py/L12 Bagging.ipynb
+++ b/12_decision_trees/py/L12 Bagging.ipynb
@@ -162,7 +162,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bagging on constrained tree"
+    "# Bagging on constrained tree\n",
+    "\n",
+    "use the DecisionTreeRegressor(max_depth = 3, min_samples_split = 10) as the base regressor"
    ]
   },
   {
