--- a/12_decision_trees/py/L12 Bagging.ipynb
+++ b/12_decision_trees/py/L12 Bagging.ipynb
@@ -2,11 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['AtBat', 'Hits', 'HmRun', 'Runs', 'RBI', 'Walks', 'Years', 'CAtBat',\n",
+       "       'CHits', 'CHmRun', 'CRuns', 'CRBI', 'CWalks', 'League', 'Division',\n",
+       "       'PutOuts', 'Assists', 'Errors', 'Salary', 'NewLeague'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -40,7 +54,8 @@
     "\n",
     "X = df.drop(['Salary'], axis = 1)\n",
     "y = df.Salary\n",
-    "\n"
+    "\n",
+    "df.columns"
    ]
   },
   {
@@ -49,20 +64,47 @@
    "source": [
     "# Preprocess\n",
     "\n",
-    "* Scale the salary and columns with StandardScaler\n",
-    "\n",
     "* Split test train\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, random_state=88)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/aperrier/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/preprocessing/data.py:583: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  warnings.warn(DEPRECATION_MSG_1D, DeprecationWarning)\n",
+      "/Users/aperrier/anaconda/envs/py35/lib/python3.5/site-packages/sklearn/preprocessing/data.py:646: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  warnings.warn(DEPRECATION_MSG_1D, DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scal = StandardScaler()\n",
+    "X = scal.fit_transform(X)\n",
+    "y = scal.fit_transform(y)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8, random_state=88)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -82,8 +124,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 108645.8246\n",
-      "Default Decision Tree scores: -150131.83 (+/- 159290.65) \n"
+      "MSE: 0.4518\n",
+      "Default Decision Tree scores: -0.73 (+/- 0.33) \n"
      ]
     }
    ],
@@ -100,7 +142,7 @@
     "print(\"MSE: %.4f\" % mse)\n",
     "\n",
     "\n",
-    "scores = cross_val_score(clf, X, y, cv=50, scoring='mean_squared_error')\n",
+    "scores = cross_val_score(clf, X, y, cv=10, scoring='mean_squared_error')\n",
     "print(\"Default Decision Tree scores: %0.2f (+/- %0.2f) \"% (np.mean(scores),np.std(scores) ))\n"
    ]
   },
@@ -126,12 +168,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.2753\n",
+      "Default Decision Tree scores: -0.54 (+/- 0.27) \n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = DecisionTreeRegressor(max_depth = 3, min_samples_split = 10)\n",
+    "\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, clf.predict(X_test))\n",
+    "print(\"MSE: %.4f\" % mse)\n",
+    "\n",
+    "\n",
+    "scores = cross_val_score(clf, X, y, cv=10, scoring='mean_squared_error')\n",
+    "print(\"Default Decision Tree scores: %0.2f (+/- %0.2f) \"% (np.mean(scores),np.std(scores) ))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,12 +214,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.1133\n",
+      "Default Decision Tree scores: -0.69 (+/- 0.28) \n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = DecisionTreeRegressor()\n",
+    "bagging = BaggingRegressor(base_estimator = clf, n_estimators = 20, max_samples=0.5, bootstrap=True, oob_score = True)\n",
+    "bagging.fit(X,y)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, bagging.predict(X_test))\n",
+    "print(\"MSE: %.4f\" % mse)\n",
+    "\n",
+    "\n",
+    "scores = cross_val_score(clf, X, y, cv=10, scoring='mean_squared_error')\n",
+    "print(\"Default Decision Tree scores: %0.2f (+/- %0.2f) \"% (np.mean(scores),np.std(scores) ))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,12 +253,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.1592\n",
+      "Default Decision Tree scores: -0.54 (+/- 0.27) \n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = DecisionTreeRegressor(max_depth = 3, min_samples_split = 10)\n",
+    "bagging = BaggingRegressor(base_estimator = clf, n_estimators = 20, max_samples=0.5, bootstrap=True, oob_score = True)\n",
+    "bagging.fit(X,y)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, bagging.predict(X_test))\n",
+    "print(\"MSE: %.4f\" % mse)\n",
+    "\n",
+    "\n",
+    "scores = cross_val_score(clf, X, y, cv=10, scoring='mean_squared_error')\n",
+    "print(\"Default Decision Tree scores: %0.2f (+/- %0.2f) \"% (np.mean(scores),np.std(scores) ))\n"
+   ]
   },
   {
    "cell_type": "code",
