--- a/12_decision_trees/py/L12 Random Forests.ipynb
+++ b/12_decision_trees/py/L12 Random Forests.ipynb
@@ -118,7 +118,7 @@
    "source": [
     "# Random Forest Classifier, \n",
     "\n",
-    "       rf = RandomForestClassifier(criterion='gini', bootstrap=False, random_state=88, )\n",
+    "       rf = RandomForestClassifier(criterion='gini', bootstrap=False, random_state=88 )\n",
     "\n",
     "    parameters = {\n",
     "        'n_estimators': [200],\n",
